:+1: add webpack command

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,7 +22,7 @@ block style
 //-
 block scripts
   //- example
-  //- script(src='js/script.js')
+  script(src='js/index.js')
 
 
 //- ------------------------------------
