:+1: change dir structure

--- a/src/docroot/css/style.styl
+++ b/src/docroot/css/style.styl
@@ -1,4 +1,4 @@
-@import './variables'
-@import './easing'
-@import './mixin'
-@import './reset'
+@import 'variables'
+@import 'easing'
+@import 'mixin'
+@import 'reset'
