--- a/src/modules/stylus/base.styl
+++ b/src/modules/stylus/base.styl
@@ -15,7 +15,6 @@ html
   font-size: $size-font-base
 
 body
-  min-width: $size-inner
   color: $color-font
   text-size-adjust: 100%
   font-family: $font-family-base
@@ -64,3 +63,4 @@ a
 img
   max-width: 100%
   vertical-align: bottom
+  z-index header
