--- a/src/modules/stylus/reset.styl
+++ b/src/modules/stylus/reset.styl
@@ -123,12 +123,19 @@ li
 
 a
 label
+button
   cursor pointer
 
 a
   &:active
   &:focus
     outline none
+
+button
+  border none
+  background none
+  margin 0
+  padding 0
 
 button-moz-focus-inner
 input-moz-focus-inner
