--- a/src/modules/pug/head/index.pug
+++ b/src/modules/pug/head/index.pug
@@ -22,6 +22,7 @@ head(prefix='og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# mixi: http://mixi-pl
   link(rel='icon', href = '/favicon.ico')
 
   //-================ STYLE ================-//
+  link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous")
   link(rel='stylesheet', href='css/style.css')
   block style
 
