--- a/src/modules/pug/variables.pug
+++ b/src/modules/pug/variables.pug
@@ -1,6 +1,6 @@
 block variables
   -
-    const protocol = 'http'
-    const domain = 'www.example.com'
+    const protocol = 'https'
+    const domain = 'noliaki.github.io'
     const URL = `${protocol}://${domain}/${locals.filePath.replace(/(\.pug)$/, '.html')}`
     const pathName = locals.filePath.replace(/(\.pug)$/, '.html')
