--- a/src/modules/pug/head/head_meta_ogp.pug
+++ b/src/modules/pug/head/head_meta_ogp.pug
@@ -1,10 +1,10 @@
 meta(property='og:url'         content = URL)
 meta(property='og:type'        content = 'website')
 meta(property='og:title'       content = TITLE, itemprop="name")
-meta(property='og:image'       content = '')
+//- meta(property='og:image'       content = '')
 meta(property='og:description' content = DESCRIPTION, itemprop="description")
-meta(property='og:site_name'   content = 111)
-meta(property='og:locale'      content = 'ja_JP')
-meta(property='article:author' content = '')
+//- meta(property='og:site_name'   content = 111)
+//- meta(property='og:locale'      content = 'ja_JP')
+//- meta(property='article:author' content = '')
 //- Facebook: https://developers.facebook.com/docs/sharing/webmasters#markup
 //- Open Graph: http://ogp.me/
