--- a/src/modules/pug/head/head_meta_twitter.pug
+++ b/src/modules/pug/head/head_meta_twitter.pug
@@ -1,9 +1,9 @@
 meta(name='twitter:card'        content = 'summary_large_image')
-meta(name='twitter:site'        content = '@site_account')
-meta(name='twitter:creator'     content = '@individual_account')
+//- meta(name='twitter:site'        content = '@site_account')
+//- meta(name='twitter:creator'     content = '@individual_account')
 meta(name='twitter:url'         content = URL)
 meta(name='twitter:title'       content = TITLE)
 meta(name='twitter:description' content = DESCRIPTION)
-meta(name='twitter:image'       content = '')
+//- meta(name='twitter:image'       content = '')
 //- さらに詳しい情報: https://dev.twitter.com/cards/getting-started
 //- Validate: https://dev.twitter.com/docs/cards/validation/validator
