--- a/src/modules/pug/head/index.pug
+++ b/src/modules/pug/head/index.pug
@@ -11,15 +11,15 @@ head(prefix='og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# mixi: http://mixi-pl
   include ./head_meta_ogp
 
   //- facebook
-  meta(property='fb:app_id', content = 111)
+  //- meta(property='fb:app_id', content = 111)
 
   //- twitter
   include ./head_meta_twitter
 
-  link(itemprop="image", href="")
+  //- link(itemprop="image", href="")
 
   //-================ FAVICON ================-//
-  link(rel='icon', href = '/favicon.ico')
+  //- link(rel='icon', href = '/favicon.ico')
 
   //-================ STYLE ================-//
   link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous")
